:recycle: refactor: correction bug in display hidden in version mobile

--- a/assets/css/tags.css
+++ b/assets/css/tags.css
@@ -14,6 +14,10 @@ header{
     z-index:999;
 }
 
+html{
+    overflow-x:hidden !important;
+}
+
 body {
     overflow-x:hidden !important;
     font-family: 'Poppins', sans-serif !important;
@@ -22,6 +26,7 @@ body {
     background-image: var(--background-image);
     color: var(--body-color);
     transition: background 0.2s linear;
+    padding-right: 0 !important;
 }
 
 section {
@@ -51,4 +56,16 @@ a {
 
 a:hover {
     color:var(--link-color-hover);
+}
+
+
+::-webkit-scrollbar-track {
+    background-color: var(--blue-color);
+}
+::-webkit-scrollbar {
+    width: 10px;
+    background: #F4F4F4;
+}
+::-webkit-scrollbar-thumb {
+    background: var(--primary-color);;
 }
